# RP2350Supercomputer

./: README.md
PIONet1/ping_master/: CMakeLists.txt  main.c  pio_spi_dma.c  pio_spi_dma.h  spi_rx_cs.pio  spi_tx_cs.pio
PIONet1/ping_slave/: CMakeLists.txt  main.c  pin_config.h
